--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,13 +6,23 @@ jobs:
   Build:
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest, 'ghcr.io/cirruslabs/macos-monterey-xcode:latest']
     runs-on: ${{matrix.os}}
     steps:
       - name: Checking out Repository
         uses: actions/checkout@v3
         with:
           submodules: true
+
+      - name: Installing node
+        if: ${{runner.os == 'macOS' && runner.arch == 'arm64'}}
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
+      - name: Installing yarn
+        if: ${{runner.os == 'macOS' && runner.arch == 'arm64'}}
+        run: npm install -g yarn
 
       - name: Building
         run: yarn install
