--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@axosoft/dump-syms",
-  "version": "0.0.1",
+  "repository": {
+    "url": "https://github.com/gitkraken/node-dump-syms"
+  },
+  "version": "0.0.2",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
